--- a/index.html
+++ b/index.html
@@ -320,5 +320,6 @@ function closeVideo() {
     }, 10);
 }
     </script>
+<script src="https://www.youtube.com/iframe_api"></script>
 </body>
 </html>
