--- a/index.html
+++ b/index.html
@@ -54,6 +54,7 @@
       padding: 120px 20px 60px;
     }
 
+    /* 🌅 Texte d'intro (fondu sans mouvement) */
     .text-container {
       text-align: center;
       color: #000;
@@ -61,12 +62,12 @@
       margin-top: 100px;
       margin-bottom: 80px;
       opacity: 0;
-      animation: fadeIn 1.5s ease-in forwards;
+      animation: fadeInOnly 1.5s ease-in forwards;
     }
 
-    @keyframes fadeIn {
-      from { opacity: 0; transform: translateY(20px); }
-      to { opacity: 1; transform: translateY(0); }
+    @keyframes fadeInOnly {
+      from { opacity: 0; }
+      to { opacity: 1; }
     }
 
     .text-container h1 {
@@ -83,17 +84,20 @@
     }
 
     .video-section {
-      width: 90%;
-      max-width: 900px;
+      width: 85%;
+      max-width: 800px;
       position: relative;
+      opacity: 0;
+      animation: fadeInOnly 2s ease-in forwards;
+      animation-delay: 0.8s;
     }
 
     .video-title {
       text-align: center;
       color: #c94a9c;
-      font-size: 3.5em;
+      font-size: 3em;
       font-weight: 300;
-      margin-bottom: 50px;
+      margin-bottom: 40px;
       transition: color 1.5s ease;
     }
 
@@ -113,7 +117,8 @@
       border-radius: 8px;
       overflow: hidden;
       box-shadow: 0 10px 40px rgba(0, 0, 0, 0.3);
-      transition: opacity 0.8s ease;
+      transition: opacity 1s ease;
+      z-index: 2;
     }
 
     .video-thumbnail img {
@@ -147,13 +152,11 @@
       left: 0;
       width: 100%;
       height: 100%;
-      display: none;
       border-radius: 8px;
       overflow: hidden;
-    }
-
-    .video-player.active {
-      display: block;
+      z-index: 1;
+      opacity: 1;
+      transition: opacity 0.5s ease;
     }
 
     .video-player iframe {
@@ -200,13 +203,19 @@
       <h2 class="video-title">5 Impasse Nirvana</h2>
 
       <div class="video-container">
+        <!-- Vidéo déjà présente sous la miniature -->
+        <div class="video-player" id="videoPlayer">
+          <iframe 
+            id="youtubeIframe" 
+            src="https://www.youtube.com/embed/8AljwViu68U?enablejsapi=1&rel=0&modestbranding=1"
+            allow="autoplay; encrypted-media" 
+            allowfullscreen>
+          </iframe>
+        </div>
+
         <div class="video-thumbnail" id="thumbnail">
           <img src="https://img.youtube.com/vi/8AljwViu68U/maxresdefault.jpg" alt="5 Impasse Nirvana">
           <div class="play-button"></div>
-        </div>
-
-        <div class="video-player" id="videoPlayer">
-          <iframe id="youtubeIframe" src="" allow="autoplay; encrypted-media" allowfullscreen></iframe>
         </div>
       </div>
     </div>
@@ -215,8 +224,6 @@
   <script>
     const background = document.getElementById('background');
     const thumbnail = document.getElementById('thumbnail');
-    const videoPlayer = document.getElementById('videoPlayer');
-    const youtubeIframe = document.getElementById('youtubeIframe');
     const body = document.body;
     let player;
 
@@ -233,23 +240,25 @@
     tag.src = "https://www.youtube.com/iframe_api";
     document.body.appendChild(tag);
 
-    // ▶️ Lecture au premier clic
-    thumbnail.addEventListener('click', () => {
-      thumbnail.style.opacity = '0';
-      setTimeout(() => {
-        thumbnail.style.display = 'none';
-        videoPlayer.classList.add('active');
-        youtubeIframe.src = "https://www.youtube.com/embed/8AljwViu68U?enablejsapi=1&autoplay=1&rel=0&modestbranding=1";
-      }, 800);
-    });
-
-    // 📺 API YouTube
     function onYouTubeIframeAPIReady() {
       player = new YT.Player('youtubeIframe', {
         events: { 'onStateChange': onPlayerStateChange }
       });
     }
 
+    // ▶️ Clic sur la miniature
+    thumbnail.addEventListener('click', () => {
+      body.classList.add('darken'); // assombrir immédiatement
+      thumbnail.style.opacity = '0';
+      setTimeout(() => {
+        thumbnail.style.display = 'none';
+        if (player && player.playVideo) {
+          player.playVideo(); // lance instantanément la vidéo déjà chargée
+        }
+      }, 800);
+    });
+
+    // 🌗 Réagit à lecture/pause YouTube
     function onPlayerStateChange(event) {
       if (event.data === YT.PlayerState.PLAYING) {
         body.classList.add('darken');
@@ -257,14 +266,6 @@
         body.classList.remove('darken');
       }
     }
-
-    // 🔚 Sortie avec Échap (optionnelle)
-    document.addEventListener('keydown', (e) => {
-      if (e.key === 'Escape' && player) {
-        player.stopVideo();
-        body.classList.remove('darken');
-      }
-    });
   </script>
 </body>
 </html>
