--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
       transition: filter 1s ease, background-position 0.3s ease-out;
     }
 
-    /* 🌗 Assombrissement à la lecture */
+    /* 🌗 Assombrissement uniquement pendant la lecture */
     body.darken .background {
       filter: brightness(0.3);
     }
@@ -51,7 +51,7 @@
       flex-direction: column;
       justify-content: center;
       align-items: center;
-      padding: 120px 20px 200px; /* ⬇️ espace augmenté en bas de page */
+      padding: 120px 20px 200px; /* espace bas de page */
     }
 
     /* 🌅 Texte d'intro (fondu sans mouvement) */
@@ -104,7 +104,7 @@
     .video-container {
       position: relative;
       width: 100%;
-      padding-bottom: calc(100% / 1.66); /* ✅ ratio 1.66:1 */
+      padding-bottom: calc(100% / 1.66); /* ratio 1.66:1 */
     }
 
     .video-thumbnail {
@@ -117,7 +117,7 @@
       border-radius: 8px;
       overflow: hidden;
       box-shadow: 0 10px 40px rgba(0, 0, 0, 0.3);
-      transition: opacity 0.5s ease;
+      transition: opacity 0.6s ease;
       z-index: 2;
     }
 
@@ -125,6 +125,11 @@
       width: 100%;
       height: 100%;
       object-fit: cover;
+      transition: transform 0.8s ease;
+    }
+
+    .video-thumbnail:hover img {
+      transform: scale(1.05);
     }
 
     .play-button {
@@ -226,12 +231,12 @@
     const body = document.body;
     let player;
 
-    // 🎞️ Parallaxe fluide du fond
+    // 🎞️ Parallaxe fluide du fond (plus rapide)
     window.addEventListener('scroll', () => {
       const scrollY = window.scrollY;
       const docHeight = document.body.scrollHeight - window.innerHeight;
       const scrollPercent = scrollY / docHeight;
-      background.style.backgroundPosition = `center ${scrollPercent * 50}%`; // 
+      background.style.backgroundPosition = `center ${scrollPercent * 100}%`;
     });
 
     // 📦 Charger l’API YouTube
@@ -239,13 +244,12 @@
     tag.src = "https://www.youtube.com/iframe_api";
     document.body.appendChild(tag);
 
-    // ✅ Préchargement du lecteur YouTube
+    // ✅ Prépare le lecteur sans muet et sans assombrir le site
     function onYouTubeIframeAPIReady() {
       player = new YT.Player('youtubeIframe', {
         events: {
           'onReady': (event) => {
-            // Précharge la vidéo silencieusement
-            event.target.mute();
+            // Précharge la vidéo (on joue rapidement pour que le lecteur soit prêt)
             event.target.playVideo();
             setTimeout(() => {
               event.target.pauseVideo();
@@ -259,13 +263,13 @@
 
     // ▶️ Clic sur la miniature
     thumbnail.addEventListener('click', () => {
-      body.classList.add('darken');
       thumbnail.style.opacity = '0';
       setTimeout(() => {
         thumbnail.style.display = 'none';
         if (player && player.playVideo) {
-          player.playVideo(); // 🚀 démarre instantanément
+          player.playVideo(); // 🚀 démarre immédiatement
         }
+        body.classList.add('darken'); // assombrit uniquement après clic
       }, 300);
     });
 
